; ModuleID = '/home/carl/AnghaBench/linux/sound/firewire/dice/extr_dice-pcm.c_playback_prepare.c'
source_filename = "/home/carl/AnghaBench/linux/sound/firewire/dice/extr_dice-pcm.c_playback_prepare.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_pcm_substream = type { %struct.TYPE_2__*, %struct.snd_dice* }
%struct.TYPE_2__ = type { i64 }
%struct.snd_dice = type { i32, %struct.amdtp_stream* }
%struct.amdtp_stream = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.snd_pcm_substream*)* @playback_prepare to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @playback_prepare(%struct.snd_pcm_substream* %0) #0 {
  %2 = alloca %struct.snd_pcm_substream*, align 8
  %3 = alloca %struct.snd_dice*, align 8
  %4 = alloca %struct.amdtp_stream*, align 8
  %5 = alloca i32, align 4
  store %struct.snd_pcm_substream* %0, %struct.snd_pcm_substream** %2, align 8
  %6 = load %struct.snd_pcm_substream*, %struct.snd_pcm_substream** %2, align 8
  %7 = getelementptr inbounds %struct.snd_pcm_substream, %struct.snd_pcm_substream* %6, i32 0, i32 1
  %8 = load %struct.snd_dice*, %struct.snd_dice** %7, align 8
  store %struct.snd_dice* %8, %struct.snd_dice** %3, align 8
  %9 = load %struct.snd_dice*, %struct.snd_dice** %3, align 8
  %10 = getelementptr inbounds %struct.snd_dice, %struct.snd_dice* %9, i32 0, i32 1
  %11 = load %struct.amdtp_stream*, %struct.amdtp_stream** %10, align 8
  %12 = load %struct.snd_pcm_substream*, %struct.snd_pcm_substream** %2, align 8
  %13 = getelementptr inbounds %struct.snd_pcm_substream, %struct.snd_pcm_substream* %12, i32 0, i32 0
  %14 = load %struct.TYPE_2__*, %struct.TYPE_2__** %13, align 8
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = getelementptr inbounds %struct.amdtp_stream, %struct.amdtp_stream* %11, i64 %16
  store %struct.amdtp_stream* %17, %struct.amdtp_stream** %4, align 8
  %18 = load %struct.snd_dice*, %struct.snd_dice** %3, align 8
  %19 = getelementptr inbounds %struct.snd_dice, %struct.snd_dice* %18, i32 0, i32 0
  %20 = call i32 @mutex_lock(i32* %19)
  %21 = load %struct.snd_dice*, %struct.snd_dice** %3, align 8
  %22 = call i32 @snd_dice_stream_start_duplex(%struct.snd_dice* %21)
  store i32 %22, i32* %5, align 4
  %23 = load %struct.snd_dice*, %struct.snd_dice** %3, align 8
  %24 = getelementptr inbounds %struct.snd_dice, %struct.snd_dice* %23, i32 0, i32 0
  %25 = call i32 @mutex_unlock(i32* %24)
  %26 = load i32, i32* %5, align 4
  %27 = icmp sge i32 %26, 0
  br i1 %27, label %28, label %31

28:                                               ; preds = %1
  %29 = load %struct.amdtp_stream*, %struct.amdtp_stream** %4, align 8
  %30 = call i32 @amdtp_stream_pcm_prepare(%struct.amdtp_stream* %29)
  br label %31

31:                                               ; preds = %28, %1
  %32 = load i32, i32* %5, align 4
  ret i32 %32
}

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @snd_dice_stream_start_duplex(%struct.snd_dice*) #1

declare dso_local i32 @mutex_unlock(i32*) #1

declare dso_local i32 @amdtp_stream_pcm_prepare(%struct.amdtp_stream*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
